# SentenceSplitter

./: .gitignore  api_sentence.py  clean.py  compare_spacy.py  consolidate_data.py  data.py  data_sentence.py  embeddings.py  finetune_sentence.py  gui_sentence.py  inference.py  inference_sentence.py  main.py  main_WS.py  main_sentence.py  model.py  pyproject.toml  readme.md  run_hackathon.py  sentence_embeddings.py  test_api_f1.py  test_finetune_init.py  test_performance.py  train.py  train_sentence.py
wordSplitter/: data.py  embeddings.py  inference.py  main.py  model.py  model_mlx.py  readme.md  train.py
