[project]
name = "SentenceSplitter"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Zunza5", email = "cazualdi@icloud.com"},
]
dependencies = ["torch>=2.1.0", "transformers>=4.40.0", "datasets", "scikit-learn", "numpy<2.0.0", "jupyter", "conllu", "accelerate", "autoawq", "bitsandbytes", "mlx>=0.31.1", "mlx-lm>=0.31.1", "NLTK", "spacy<4.0.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
