[project]
name = "SentenceSplitter"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Zunza5", email = "cazualdi@icloud.com"},
]
dependencies = ["torch>=2.1.0", "transformers>=4.40.0", "datasets", "scikit-learn", "numpy<2.0.0", "jupyter", "conllu", "accelerate", "autoawq", "bitsandbytes", "mlx>=0.31.1", "mlx-lm>=0.31.1", "nltk>=3.9.3", "spacy<4.0.0", "matplotlib>=3.10.8", "tqdm>=4.67.3"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
